<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/news_feed" />
        <item
            android:id="@+id/nav_blod_bank"
            android:icon="@drawable/donation"
            android:title="@string/blod_bank" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/mail"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_volunteer"
            android:icon="@drawable/mail"
            android:title="@string/volunteer_withUs" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
    </group>

</menu>
