<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="yackeen.com.daleel.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg" />
    <!-- Login progress -->
    <TextView
        android:id="@+id/setLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="start"
        android:text="@string/lang"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_120sdp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_2sdp"
                android:focusableInTouchMode="true"
                app:cardCornerRadius="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/curvy_white_bg"
                    android:orientation="vertical"
                    android:padding="@dimen/_16sdp">

                    <me.grantland.widget.AutofitTextView
                        style="?android:textAppearanceLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="start"
                        android:text="@string/welcome"
                        android:textColor="@android:color/black" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">


                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/email_drawable"
                            android:drawablePadding="@dimen/_5sdp"
                            android:drawableStart="@drawable/email_drawable"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/eye"
                            android:drawableLeft="@drawable/password_drawable"
                            android:drawablePadding="@dimen/_5sdp"
                            android:drawableRight="@drawable/eye"
                            android:drawableStart="@drawable/password_drawable"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <me.grantland.widget.AutofitTextView
                        android:id="@+id/forgetPassword"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="@string/forget_password"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <me.grantland.widget.AutofitTextView
                        android:id="@+id/login"
                        style="?android:textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/curvy_sign_bg"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/sign_in"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <me.grantland.widget.AutofitTextView
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:text="@string/or"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center|center_vertical"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/google"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="@dimen/_4sdp"
                            android:background="@drawable/google_plus"
                            android:gravity="center"
                            android:textAllCaps="false" />

                        <Button
                            android:id="@+id/facebook"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_4sdp"
                            android:background="@drawable/facebookplus"
                            android:gravity="center"
                            android:textAllCaps="false" />
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:background="@drawable/curvy_signup_bg"
                app:cardCornerRadius="@dimen/_8sdp">

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/newAccount"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/new_account"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
</RelativeLayout>
